# QuizCat

./: CLAUDE_RAILWAY_HANDOFF.md  README.md  pyproject.toml  railway.toml  screens.py  services.py  storage.py
.github/workflows/: ci.yml
WIP/: HARNESS.md — CCAT Leash.md  Mathematical & Numerical Tools.md
tests/: test_sqlite_backend.py
web/: .env.local.example  README.md  package-lock.json  package.json
web/app/: layout.tsx
web/app/api/question-lab/: route.ts
web/app/question-lab/: page.tsx
web/app/stats/: page.tsx
web/components/: BrandLogo.tsx  Dashboard.tsx  QuestionLab.tsx
web/lib/: queries.ts  types.ts
web/lib/harness/: calculator.ts  checkpoints.ts  worker.ts
web/scripts/: test-harness.ts
