[project]
name = "quizcat"
version = "0.1.0"
description = "A TUI for CCAT-style quizzes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.7",
    "textual-image>=0.13.2",
    "textual-serve>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]
